styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

:root {
  /* colors */
  --link-color: #035fe6;
  --link-hover-color: #136ff6;
  --background-color: #fff;
  --overlay-background-color: #eee;
  --highlight-background-color: #ccc;
  --text-color: #000;
  --footer-text-color: #ded9d6;
  --footer-background-color: #1f2b35;

  /* fonts */
  --body-font-family: 'HCo Decimal', lato, 'Helvetica Neue', helvetica, arial, sans-serif;
  --heading-font-family: var(--body-font-family);
  --fixed-font-family: menlo, monaco, consolas, "Courier New", monospace;

  /* body sizes */
  --body-font-size-m: 22px;
  --body-font-size-s: 18px;
  --body-font-size-xs: 16px;

  /* heading sizes */
  --heading-font-size-xxl: 40px;
  --heading-font-size-xl: 28px;
  --heading-font-size-l: 26px;
  --heading-font-size-m: 24px;
  --heading-font-size-s: 20px;
  --heading-font-size-xs: 18px;

  /* nav height */
  --nav-height: 119px;

  /* max width */
  --max-width: 1400px;
}

@media (min-width: 768px) {
  :root {
    /* heading sizes */
    --heading-font-size-xxl: 48px;
    --heading-font-size-xl: 40px;
    --heading-font-size-l: 32px;
    --heading-font-size-m: 24px;
    --heading-font-size-s: 20px;
    --heading-font-size-xs: 18px;
  }
}

* {
  box-sizing: border-box;
}

body {
  font-family: var(--body-font-family);
  font-size: 14px;
  line-height: 1.4;
  color: #36424b;
  background-color: #fff;
  display: none;
  overflow-x: hidden;
  margin: 0;
}

body.appear {
  display: block;
}

body.no-body-scroll {
  overflow: hidden;
}

header {
  background: #00C0E8;
  height: var(--nav-height);
  max-width: var(--max-width);
  margin: auto;
}

body main {
  max-width: var(--max-width);
  margin: auto;
}

.book header {
  background: rgb(244 244 242 / 50%);
}

header.loaded {
  background: transparent;
  height: auto;
}

h1, h2, h3,
h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-weight: 300;
  line-height: 1.25;
  margin: 0;
  scroll-margin: calc(var(--nav-height) + 1em);
}

h1 { font-size: var(--heading-font-size-xxl) }
h2 { font-size: var(--heading-font-size-xl) }
h3 { font-size: var(--heading-font-size-l) }
h4 { font-size: var(--heading-font-size-m) }
h5 { font-size: var(--heading-font-size-s) }
h6 { font-size: var(--heading-font-size-xs) }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  padding: .125em;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}

.icon svg {
  height: 100%;
  width: 100%;
}

main .section {
  padding: 64px 16px;
}

@media (min-width: 600px) {
  main .section {
    padding: 64px 32px;
  }
}

@media (min-width: 900px) {
  .section > div {
    max-width: 1200px;
    margin: auto;
  }
}

/* section metadata */
main .section.highlight {
  background-color: var(--highlight-background-color);
}

/* utils */
.visible-xs,
.visible-sm,
.visible-md,
.visible-lg {
  display: none !important;
}

@media (max-width: 767px) {
  .visible-xs {
    display: block !important;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .visible-sm {
    display: block !important;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  .visible-md {
    display: block !important;
  }
}

@media (min-width: 1200px) {
  .visible-lg {
    display: block !important;
  }
}

@media (max-width: 767px) {
  .hidden-xs {
    display: none !important;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .hidden-sm {
    display: none !important;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  .hidden-md {
    display: none !important;
  }
}

@media (min-width: 1200px) {
  .hidden-lg {
    display: none !important;
  }
}

.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
}

@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}

@media (min-width: 992px) {
  :root {
    --nav-height: 135px;
  }

  .container {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1200px;
  }
}

/* book template */
.book {
  background: rgb(244 244 242 / 50%);
}

.book .sidenav-container.article-container {
  display: flex;
  padding: 0;
  flex-direction: column;
}

@media (min-width: 768px) {
  .book .sidenav-container.article-container {
    flex-direction: row;
  }

  .book .sidenav-wrapper {
    min-width: 330px;
    position: sticky;
    overflow: hidden;
    top: 0;
    display: flex;
    flex-direction: column;
    z-index: 1;
    margin-top: 0;
    padding-left: 30px;
  }
}

.book .article-wrapper {
  max-width: calc(min(100vw, 1400px) - 330px);
  display: flex;
  flex-direction: column;
  align-self: stretch;
  flex-grow: 1;
  margin: 0;
  padding-right: 30px;
}

